fix messaging and extend auto-replies
